[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/drag_polygon2d/lib/handler.gd" type="Script" id=1]
[ext_resource path="res://addons/drag_polygon2d/lib/handler.png" type="Texture" id=2]
[ext_resource path="res://addons/drag_polygon2d/lib/handler_hover.png" type="Texture" id=3]

[node name="Control" type="Control"]
script = ExtResource( 1 )

[node name="button" type="TextureButton" parent="."]
margin_top = -4.0
margin_right = 6.0
margin_bottom = 2.0
rect_rotation = 45.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 3 )

[connection signal="button_down" from="button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="button" to="." method="_on_button_button_up"]
[connection signal="gui_input" from="button" to="." method="_on_button_gui_input"]
